@@ -2,12 +2,12 @@
 
 # ABSTRACT: Perl utility to interact with OpenData ShortNumberInfo web service
 
-# PODNAME: shortnumberinfo
+# PODNAME: short_number_info
 
-use v5.36;
+use v5.37.9;
 use OpenData::ShortNumberInfo;
 
-my $shortnumberinfo =
+my $short_number =
 	OpenData::ShortNumberInfo -> new( number => $ARGV[0] );
 
-say $shortnumberinfo -> name;
+say $short_number -> name;
