@@ -5,6 +5,10 @@ Revision history for OpenData-ShortNumberInfo
   - Correct pod
   - Further simplify dist.ini
   - Make number a reader method
+  - Convert from Object::Pad to feature 'class'
+  - Rename the utility script
+  - Correct tests
+  - Construct from JSON::PP
 
 0.230380  2023-02-07 23:30:38+04:00 Asia/Baku
   - Use JSON::PP
